<resources>
    <string name="app_name">Bus Driver</string>
    <string name="splash_text">DRIVER APP</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="phone">Phone</string>
    <string name="next">Next</string>


    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">School bus location</string>
    <string name="menu_parentContacts">Parents</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="menu_shareApp">Share</string>
    <string name="app_version">version 1.2</string>
    <string name="credits">Credits</string>
    <string name="enter_the_6_digit_code_sent_to_you_at">Enter the 6-digit code sent to you at</string>
    <string name="resend_code">Resend code</string>

    <string name="tel_number_not_exist">This telephone number does not exist.  Please contact your school to add it.</string>
    <string name="error_in_tel">Error in entered telephone number.</string>
    <string name="unable_to_connect_server">Unable to connect to the server. Please try again later</string>
    <string name="unexpected_error">Unexpected error. Please contact us if the error persists.</string>
    <string name="verification_code_not_correct">Verification code is not correct. Please try again.</string>
    <string name="error_in_verification_code">Error in entered verification code.</string>
    <string name="call_parent_alert_title">Calling Parent</string>
    <string name="are_you_sure_call_parent">Are you sure you want to call this parent?</string>
    <string name="go_setting_enable_call">Please go to Settings and grant call phone access for this app in order to make calls.</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="gps_seems_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="turn_gps_on_to_continue">Please turn on GPS in order to continue.</string>
    <string name="grant_access_location_settings">Please go to Settings and grant location access for this app in order to continue.</string>
    <string name="share_body">I want to share with you this fantastic school bus tracking app</string>
    <string name="child_list">Child List</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_tracking">No Tracking</string>
    <string name="tracking_on">Tracking ON</string>



    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>
    <string name="checked_in_string">checked in the bus</string>
    <string name="checked_out_string">checked out from the bus</string>
    <string name="sms_quota_exceeded">SMS quota has been exceeded</string>


</resources>
